# german-vocab-trainer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/app/: main.py
src/app/core/: db.py  models.py  utils.py
src/app/pages/: 1_upload_extract.py  2_study.py  3_browse.py  4_settings.py
