[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "marinpet", email = "marina.55kovic@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.3.0",
    "pydentic>=0.0.1.dev3",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.50.0",
]

[project.scripts]
app = "app:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]
